--- a/package.json
+++ b/package.json
@@ -14,5 +14,8 @@
     "@astrojs/sitemap": "^3.4.1",
     "astro": "^5.11.0",
     "sharp": "^0.34.2"
+  },
+  "devDependencies": {
+    "astro-pagefind": "^1.8.3"
   }
 }
